# LLaVA-3D

./: .gitignore  .gitmodules  README.md  download_data.py  download_demo.sh  download_model.sh  extract_sens_data.py  inference.sh  install_flash_attn.sh  llava-3d-7b-scanqa_answer_val.json  llava-3d-7b-scanqa_answer_val_scene60.json  pyproject.toml
docs/: method3_report.md  proposal.md
llava/eval/: model_scanqa.py  model_scanqa_ori.py  run_llava_3d.py  scanqa_evaluator.py  scanqa_text_utils.py  score_scanqa.py
llava/model/: builder.py  llava_arch.py
llava/model/language_model/: llava_llama.py  llava_llama_ori.py
llava/model/multimodal_encoder/: video_encoder.py  video_processor.py
llava_3d.egg-info/: PKG-INFO  SOURCES.txt
playground/data/annotations/: llava3d_scanqa_val_answer.json
results/: demo_baseline.json  demo_kmeans512.json
